# plm_reverse_distillation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  inference_tutorial.ipynb  pyproject.toml
scripts/: extract.py  train.py
src/reverse_distillation/: __init__.py  pretrained.py
src/reverse_distillation/models/: rd_model.py
src/reverse_distillation/scaler/: modules.py  naive.py  rd.py  utils.py
